--- a/pom.xml
+++ b/pom.xml
@@ -26,16 +26,6 @@
   </build>
   <dependencies>
   	<dependency>
-  		<groupId>mysq</groupId>
-  		<artifactId>mysql-connector-java</artifactId>
-  		<version>5.1.45</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>org.hibernate</groupId>
-  		<artifactId>hibernate-core</artifactId>
-  		<version>5.2.13.Final</version>
-  	</dependency>
-  	<dependency>
   		<groupId>org.apache.taglibs</groupId>
   		<artifactId>taglibs-standard-impl</artifactId>
   		<version>1.2.5</version>
@@ -45,5 +35,24 @@
   		<artifactId>javax.servlet.jsp.jstl-api</artifactId>
   		<version>1.2.1</version>
   	</dependency>
+  	<dependency>
+  		<groupId>mysql</groupId>
+  		<artifactId>mysql-connector-java</artifactId>
+  		<version>5.1.45</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.hibernate</groupId>
+  		<artifactId>hibernate-core</artifactId>
+  		<version>5.2.13.Final</version>
+  	</dependency>
   </dependencies>
+  <dependencyManagement>
+  	<dependencies>
+  		<dependency>
+  			<groupId>mysq</groupId>
+  			<artifactId>mysql-connector-java</artifactId>
+  			<version>5.1.45</version>
+  		</dependency>
+  	</dependencies>
+  </dependencyManagement>
 </project>
